[package]
name = "patchstorage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.6", features = ["derive"] }
futures-util = "0.3.30"
page-turner = "1.0.0"
parse_link_header = "0.3.3"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-middleware = { version = "0.3.1", features = ["json"] }
reqwest-retry = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
